--- a/FeedMeNomNom/MainWindow.xaml
+++ b/FeedMeNomNom/MainWindow.xaml
@@ -1,9 +1,10 @@
 ﻿<Window x:Class="FeedMeNomNom.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="FeedMeNomNom" Height="768" Width="1024" WindowStartupLocation="CenterScreen">
-    <Grid Background="White">
-        <TextBox x:Name="tbURL" Height="39" Margin="188,33,238,0" TextWrapping="Wrap" Text="...type URL here" VerticalAlignment="Top" FontSize="24" FontFamily="Prestige Elite Std"/>
-        <ListBox x:Name="listBox1" HorizontalAlignment="Left" Height="257" Margin="188,77,0,0" VerticalAlignment="Top" Width="590"/>
+        Title="FeedMeNomNom" Height="768" Width="1024" WindowStartupLocation="CenterScreen" Background="#FF464646">
+    <Grid Background="#FF001F1E">
+        <TextBox x:Name="tbURL" Height="30" Margin="10,10,416,0" TextWrapping="Wrap" Text="...type URL here" VerticalAlignment="Top" FontFamily="Prestige Elite Std" Background="White"/>
+        <Button Content="Get Feed" HorizontalAlignment="Left" Margin="605,10,0,0" VerticalAlignment="Top" Width="88" Click="Button_Click" Height="30"/>
+        <Rectangle Fill="#FF003E3E" HorizontalAlignment="Left" Height="100" Margin="0,638,0,0" Stroke="Black" VerticalAlignment="Top" Width="1016" StrokeThickness="0"/>
     </Grid>
 </Window>
