--- a/FeedMeNomNom/MainWindow.xaml
+++ b/FeedMeNomNom/MainWindow.xaml
@@ -6,5 +6,7 @@
         <TextBox x:Name="tbURL" Height="30" Margin="10,10,416,0" TextWrapping="Wrap" Text="...type URL here" VerticalAlignment="Top" FontFamily="Prestige Elite Std" Background="White"/>
         <Button Content="Get Feed" HorizontalAlignment="Left" Margin="605,10,0,0" VerticalAlignment="Top" Width="88" Click="Button_Click" Height="30"/>
         <Rectangle Fill="#FF003E3E" HorizontalAlignment="Left" Height="100" Margin="0,638,0,0" Stroke="Black" VerticalAlignment="Top" Width="1016" StrokeThickness="0"/>
+        <Button Content="Download MP3" HorizontalAlignment="Left" Margin="780,534,0,0" VerticalAlignment="Top" Width="108" Click="Button_Click_1" Height="32"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="780,499,0,0" VerticalAlignment="Top" Width="108" Click="Button_Click_2" Height="30"/>
     </Grid>
 </Window>
