--- a/FeedMeNomNom/MainWindow.xaml
+++ b/FeedMeNomNom/MainWindow.xaml
@@ -2,12 +2,45 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="FeedMeNomNom" Height="768" Width="1024" WindowStartupLocation="CenterScreen" Background="#FF464646">
-    <Grid Background="#FF001F1E">
-        <TextBox x:Name="tbURL" Height="30" Margin="185,51,254,0" TextWrapping="Wrap" Text="...type URL here" VerticalAlignment="Top" FontFamily="Prestige Elite Std" Background="White"/>
-        <Button x:Name="getFeed_button" Content="Get Feed" HorizontalAlignment="Left" Margin="767,51,0,0" VerticalAlignment="Top" Width="88" Height="30" Click="getFeed_button_Click"/>
-        <Rectangle Fill="#FF003E3E" HorizontalAlignment="Left" Height="100" Margin="0,638,0,0" Stroke="Black" VerticalAlignment="Top" Width="1016" StrokeThickness="0"/>
-        <Button Content="Download MP3" HorizontalAlignment="Left" Margin="884,576,0,0" VerticalAlignment="Top" Width="108" Click="Button_Click_1" Height="32"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="884,540,0,0" VerticalAlignment="Top" Width="108" Click="Button_Click_2" Height="30"/>
-        <ListBox x:Name="listBox_Feed" HorizontalAlignment="Left" Height="507" Margin="185,101,0,0" VerticalAlignment="Top" Width="670" Background="#FF003E3E" BorderThickness="0" Foreground="White"/>
+    <Grid Background="#FF1D1D1D">
+        <TextBox x:Name="tbURL" Height="20" Margin="16,32,744,0" TextWrapping="Wrap" Text="http://alexosigge.libsyn.com//rss" VerticalAlignment="Top" FontFamily="Prestige Elite Std" Background="White" FontSize="10"/>
+        <Button x:Name="getFeed_button" Content="Go!" HorizontalAlignment="Left" Margin="278,32,0,0" VerticalAlignment="Top" Width="34" Height="20" Click="getFeed_button_Click"/>
+        <Button Content="Download MP3" HorizontalAlignment="Left" Margin="908,-78,0,0" VerticalAlignment="Top" Width="108" Click="Button_Click_1" Height="32"/>
+        <ListBox x:Name="listBox_Feed" HorizontalAlignment="Left" Height="545" Margin="0,63,0,0" VerticalAlignment="Top" Width="323" Background="#FF404040" BorderThickness="0" Foreground="White" Panel.ZIndex="3"/>
+        <Label Content="Search" HorizontalAlignment="Left" Height="22" Margin="12,10,0,0" VerticalAlignment="Top" Width="40" FontSize="10" Foreground="White"/>
+        <ListBox x:Name="list_Copy1" HorizontalAlignment="Left" Height="63" VerticalAlignment="Top" Width="322" Background="#FF404040" BorderThickness="0" Panel.ZIndex="-1"/>
+        <ListBox x:Name="list_Copy" HorizontalAlignment="Left" Height="63" VerticalAlignment="Top" Width="694" Background="#FF404040" BorderThickness="0" Panel.ZIndex="-1" Margin="322,0,0,0"/>
+        <Rectangle x:Name="rectListboxFeed" Fill="#FF515151" HorizontalAlignment="Left" Height="32" Margin="0,608,0,0" Stroke="Black" StrokeThickness="0" VerticalAlignment="Top" Width="323" Panel.ZIndex="3"/>
+        <Button x:Name="downloadSelectedPod" Content="Download Selected" HorizontalAlignment="Left" Margin="7,613,0,0" VerticalAlignment="Top" Width="110" Panel.ZIndex="3"/>
+        <Button x:Name="savePodFeed" Content="Save Podcast" HorizontalAlignment="Left" Margin="133,613,0,0" VerticalAlignment="Top" Width="82" Panel.ZIndex="3"/>
+        <Button x:Name="closeFeed" Content="Close" HorizontalAlignment="Left" Margin="231,613,0,0" VerticalAlignment="Top" Width="81" Click="closeFeed_Click" Panel.ZIndex="3"/>
+        <ListBox x:Name="list_Copy2" HorizontalAlignment="Left" Height="77" VerticalAlignment="Top" Width="1016" Background="#FF404040" BorderThickness="0" Panel.ZIndex="-1" Margin="0,661,0,0"/>
+        <Grid x:Name="gridPage" HorizontalAlignment="Left" Height="530" Margin="-445,99,-446,0" VerticalAlignment="Top" Width="1907" Background="#FF1D1D1D" Panel.ZIndex="2">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="26*"/>
+
+                <RowDefinition Height="475*"/>
+
+                <RowDefinition Height="26*"/>
+
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+
+                <ColumnDefinition Width="20*"/>
+
+
+                <ColumnDefinition Width="1312*"/>
+
+                <ColumnDefinition Width="18*"/>
+
+
+            </Grid.ColumnDefinitions>
+            <Rectangle Grid.Column="1" Fill="#FFBD1010" HorizontalAlignment="Left" Height="414" Margin="1373,23,0,0" Grid.Row="1" Stroke="Black" StrokeThickness="0" VerticalAlignment="Top" Width="471"/>
+            <Rectangle Grid.Column="1" Fill="#FFBD1010" HorizontalAlignment="Left" Height="414" Margin="10,23,0,0" Grid.Row="1" Stroke="Black" StrokeThickness="0" VerticalAlignment="Top" Width="471"/>
+            <Rectangle Grid.Column="1" Fill="#FF10BD10" HorizontalAlignment="Left" Height="414" Margin="519,23,0,0" Grid.Row="1" Stroke="Black" StrokeThickness="0" VerticalAlignment="Top" Width="812"/>
+        </Grid>
+        <Button x:Name="viewMain" Content="Center" HorizontalAlignment="Left" Margin="472,685,0,0" VerticalAlignment="Top" Width="75" Click="viewMain_Click"/>
+        <Button x:Name="viewFeeds" Content="Feeds" HorizontalAlignment="Left" Margin="908,685,0,0" VerticalAlignment="Top" Width="75" Click="viewFeeds_Click"/>
+        <Button x:Name="viewCategory" Content="Category" HorizontalAlignment="Left" Margin="16,685,0,0" VerticalAlignment="Top" Width="75" Click="viewCategory_Click"/>
     </Grid>
 </Window>
