--- a/FeedMeNomNom/MainWindow.xaml
+++ b/FeedMeNomNom/MainWindow.xaml
@@ -1,21 +1,21 @@
 ﻿<Window x:Class="FeedMeNomNom.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="FeedMeNomNom" Height="768" Width="1024" WindowStartupLocation="CenterScreen" Background="#FF464646">
+        Title="FeedMeNomNom" Height="600" Width="800" WindowStartupLocation="CenterScreen" Background="#FF464646">
     <Grid Background="#FF1D1D1D">
-        <TextBox x:Name="tbURL" Height="20" Margin="16,32,744,0" TextWrapping="Wrap" Text="http://alexosigge.libsyn.com//rss" VerticalAlignment="Top" FontFamily="Prestige Elite Std" Background="White" FontSize="10"/>
-        <Button x:Name="getFeed_button" Content="Go!" HorizontalAlignment="Left" Margin="278,32,0,0" VerticalAlignment="Top" Width="34" Height="20" Click="getFeed_button_Click"/>
+        <TextBox x:Name="tbURL" Height="20" Margin="22,32,528,0" TextWrapping="Wrap" Text="http://alexosigge.libsyn.com//rss" VerticalAlignment="Top" FontFamily="Prestige Elite Std" Background="White" FontSize="10"/>
+        <Button x:Name="getFeed_button" Content="Go!" HorizontalAlignment="Left" Margin="284,32,0,0" VerticalAlignment="Top" Width="34" Height="20" Click="getFeed_button_Click"/>
         <Button Content="Download MP3" HorizontalAlignment="Left" Margin="908,-78,0,0" VerticalAlignment="Top" Width="108" Click="Button_Click_1" Height="32"/>
-        <ListBox x:Name="listBox_Feed" HorizontalAlignment="Left" Height="545" Margin="0,63,0,0" VerticalAlignment="Top" Width="323" Background="#FF404040" BorderThickness="0" Foreground="White" Panel.ZIndex="3"/>
-        <Label Content="Search" HorizontalAlignment="Left" Height="22" Margin="12,10,0,0" VerticalAlignment="Top" Width="40" FontSize="10" Foreground="White"/>
-        <ListBox x:Name="list_Copy1" HorizontalAlignment="Left" Height="63" VerticalAlignment="Top" Width="322" Background="#FF404040" BorderThickness="0" Panel.ZIndex="-1"/>
-        <ListBox x:Name="list_Copy" HorizontalAlignment="Left" Height="63" VerticalAlignment="Top" Width="694" Background="#FF404040" BorderThickness="0" Panel.ZIndex="-1" Margin="322,0,0,0"/>
-        <Rectangle x:Name="rectListboxFeed" Fill="#FF515151" HorizontalAlignment="Left" Height="32" Margin="0,608,0,0" Stroke="Black" StrokeThickness="0" VerticalAlignment="Top" Width="323" Panel.ZIndex="3"/>
-        <Button x:Name="downloadSelectedPod" Content="Download Selected" HorizontalAlignment="Left" Margin="7,613,0,0" VerticalAlignment="Top" Width="110" Panel.ZIndex="3"/>
-        <Button x:Name="savePodFeed" Content="Save Podcast" HorizontalAlignment="Left" Margin="133,613,0,0" VerticalAlignment="Top" Width="82" Panel.ZIndex="3"/>
-        <Button x:Name="closeFeed" Content="Close" HorizontalAlignment="Left" Margin="231,613,0,0" VerticalAlignment="Top" Width="81" Click="closeFeed_Click" Panel.ZIndex="3"/>
-        <ListBox x:Name="list_Copy2" HorizontalAlignment="Left" Height="77" VerticalAlignment="Top" Width="1016" Background="#FF404040" BorderThickness="0" Panel.ZIndex="-1" Margin="0,661,0,0"/>
-        <Grid x:Name="gridPage" HorizontalAlignment="Left" Height="530" Margin="-445,99,-446,0" VerticalAlignment="Top" Width="1907" Background="#FF1D1D1D" Panel.ZIndex="2">
+        <ListBox x:Name="listBox_Feed" HorizontalAlignment="Left" Height="413" Margin="0,63,0,0" VerticalAlignment="Top" Width="268" Background="#FF404040" BorderThickness="0" Foreground="White" Panel.ZIndex="3"/>
+        <Label Content="Search" HorizontalAlignment="Left" Height="22" Margin="18,10,0,0" VerticalAlignment="Top" Width="40" FontSize="10" Foreground="White"/>
+        <ListBox x:Name="list_Copy1" HorizontalAlignment="Left" Height="63" VerticalAlignment="Top" Width="328" Background="#FF404040" BorderThickness="0" Panel.ZIndex="-1"/>
+        <ListBox x:Name="list_Copy" HorizontalAlignment="Left" Height="63" VerticalAlignment="Top" Width="464" Background="#FF404040" BorderThickness="0" Panel.ZIndex="-1" Margin="328,0,0,0"/>
+        <Rectangle x:Name="rectListboxFeed" Fill="#FF515151" HorizontalAlignment="Left" Height="32" Margin="0,471,0,0" Stroke="Black" StrokeThickness="0" VerticalAlignment="Top" Width="268" Panel.ZIndex="3"/>
+        <Button x:Name="downloadSelectedPod" Content="Download Selected" HorizontalAlignment="Left" Margin="10,476,0,0" VerticalAlignment="Top" Width="91" Panel.ZIndex="3" Height="19"/>
+        <Button x:Name="savePodFeed" Content="Save Podcast" HorizontalAlignment="Left" Margin="115,476,0,0" VerticalAlignment="Top" Width="68" Panel.ZIndex="3" Height="19"/>
+        <Button x:Name="closeFeed" Content="Close" HorizontalAlignment="Left" Margin="197,476,0,0" VerticalAlignment="Top" Width="67" Click="closeFeed_Click" Panel.ZIndex="3" Height="19"/>
+        <ListBox x:Name="list_Copy2" HorizontalAlignment="Left" Height="56" VerticalAlignment="Top" Width="792" Background="#FF404040" BorderThickness="0" Panel.ZIndex="-1" Margin="0,514,0,0"/>
+        <Grid x:Name="gridPage" HorizontalAlignment="Left" Height="409" Margin="-800,86,-816,0" VerticalAlignment="Top" Width="2400" Background="#FF1D1D1D" Panel.ZIndex="2">
             <Grid.RowDefinitions>
                 <RowDefinition Height="26*"/>
 
@@ -35,12 +35,12 @@
 
 
             </Grid.ColumnDefinitions>
-            <Rectangle Grid.Column="1" Fill="#FFBD1010" HorizontalAlignment="Left" Height="414" Margin="1373,23,0,0" Grid.Row="1" Stroke="Black" StrokeThickness="0" VerticalAlignment="Top" Width="471"/>
-            <Rectangle Grid.Column="1" Fill="#FFBD1010" HorizontalAlignment="Left" Height="414" Margin="10,23,0,0" Grid.Row="1" Stroke="Black" StrokeThickness="0" VerticalAlignment="Top" Width="471"/>
-            <Rectangle Grid.Column="1" Fill="#FF103FBD" HorizontalAlignment="Left" Height="414" Margin="519,23,0,0" Grid.Row="1" Stroke="Black" StrokeThickness="0" VerticalAlignment="Top" Width="812"/>
+            <Rectangle Grid.Column="1" Fill="#FF103FBD" HorizontalAlignment="Left" Height="409" Margin="777,0,0,0" Stroke="Black" StrokeThickness="0" VerticalAlignment="Top" Width="759" Grid.RowSpan="3"/>
+            <Rectangle Grid.Column="1" Fill="#FFBD10AD" Height="409" Margin="1595,0,0,0" Stroke="Black" StrokeThickness="0" VerticalAlignment="Top" Grid.RowSpan="3" Grid.ColumnSpan="2" HorizontalAlignment="Left" Width="759"/>
+            <Rectangle Fill="#FF18BD10" HorizontalAlignment="Left" Height="409" Stroke="Black" StrokeThickness="0" VerticalAlignment="Top" Width="759" Grid.RowSpan="3" Grid.ColumnSpan="2" Margin="10,0,0,0"/>
         </Grid>
-        <Button x:Name="viewMain" Content="Center" HorizontalAlignment="Left" Margin="472,685,0,0" VerticalAlignment="Top" Width="75" Click="viewMain_Click"/>
-        <Button x:Name="viewFeeds" Content="Feeds" HorizontalAlignment="Left" Margin="908,685,0,0" VerticalAlignment="Top" Width="75" Click="viewFeeds_Click"/>
-        <Button x:Name="viewCategory" Content="Category" HorizontalAlignment="Left" Margin="16,685,0,0" VerticalAlignment="Top" Width="75" Click="viewCategory_Click"/>
+        <Button x:Name="viewMain" Content="Center" HorizontalAlignment="Left" Margin="373,532,0,0" VerticalAlignment="Top" Width="58" Click="viewMain_Click"/>
+        <Button x:Name="viewFeeds" Content="Feeds" HorizontalAlignment="Left" Margin="711,532,0,0" VerticalAlignment="Top" Width="58" Click="viewFeeds_Click"/>
+        <Button x:Name="viewCategory" Content="Category" HorizontalAlignment="Left" Margin="19,532,0,0" VerticalAlignment="Top" Width="58" Click="viewCategory_Click"/>
     </Grid>
 </Window>
