--- a/FeedMeNomNom/MainWindow.xaml
+++ b/FeedMeNomNom/MainWindow.xaml
@@ -4,10 +4,10 @@
         Title="FeedMeNomNom" Height="600" Width="800" WindowStartupLocation="CenterScreen" Background="#FF464646">
     <Grid Background="#FF1D1D1D">
         <TextBox x:Name="tbURL" Height="20" Margin="22,32,528,0" TextWrapping="Wrap" Text="http://alexosigge.libsyn.com//rss" VerticalAlignment="Top" FontFamily="Prestige Elite Std" Background="White" FontSize="10"/>
-        <Button x:Name="getFeed_button" Content="Go!" HorizontalAlignment="Left" Margin="284,32,0,0" VerticalAlignment="Top" Width="34" Height="20" Click="getFeed_button_Click"/>
+        <Button x:Name="getFeed_button" Content="Go!" HorizontalAlignment="Left" Margin="269,32,0,0" VerticalAlignment="Top" Width="34" Height="20" Click="getFeed_button_Click"/>
         <Button Content="Download MP3" HorizontalAlignment="Left" Margin="908,-78,0,0" VerticalAlignment="Top" Width="108" Click="Button_Click_1" Height="32"/>
         <ListBox x:Name="listBox_Feed" HorizontalAlignment="Left" Height="413" Margin="0,63,0,0" VerticalAlignment="Top" Width="268" Background="#FF404040" BorderThickness="0" Foreground="White" Panel.ZIndex="3" FontWeight="Bold" SelectionChanged="listBox_Feed_SelectionChanged"/>
-        <Label Content="Search" HorizontalAlignment="Left" Height="22" Margin="18,10,0,0" VerticalAlignment="Top" Width="40" FontSize="10" Foreground="White" FontWeight="Bold"/>
+        <Label Content="Search" HorizontalAlignment="Left" Height="22" Margin="18,10,0,0" VerticalAlignment="Top" Width="46" FontSize="10" Foreground="White" FontWeight="Bold"/>
         <ListBox x:Name="list_Copy1" HorizontalAlignment="Left" Height="63" VerticalAlignment="Top" Width="328" Background="#FF404040" BorderThickness="0" Panel.ZIndex="-1"/>
         <ListBox x:Name="list_Copy" HorizontalAlignment="Left" Height="63" VerticalAlignment="Top" Width="464" Background="#FF404040" BorderThickness="0" Panel.ZIndex="-1" Margin="328,0,0,0"/>
         <Rectangle x:Name="rectListboxFeed" Fill="#FF515151" HorizontalAlignment="Left" Height="32" Margin="0,471,0,0" Stroke="Black" StrokeThickness="0" VerticalAlignment="Top" Width="268" Panel.ZIndex="3"/>
@@ -37,10 +37,10 @@
             </Grid.ColumnDefinitions>
             <Rectangle Grid.Column="1" Fill="#FF103FBD" HorizontalAlignment="Left" Height="409" Margin="778,0,0,0" Stroke="Black" StrokeThickness="0" VerticalAlignment="Top" Width="10" Grid.RowSpan="3"/>
             <Rectangle Grid.Column="1" Fill="#FFBD10AD" Height="409" Margin="1595,0,0,0" Stroke="Black" StrokeThickness="0" VerticalAlignment="Top" Grid.RowSpan="3" HorizontalAlignment="Left" Width="8"/>
-            <Button x:Name="button" Content="Button" Grid.Column="1" HorizontalAlignment="Left" Margin="1224,127,0,0" Grid.Row="1" VerticalAlignment="Top" Width="74" Click="button_Click"/>
             <ListBox HorizontalAlignment="Left" Width="166" Background="#FF404040" BorderThickness="0" Foreground="White" Grid.RowSpan="2" Margin="26,13,0,0" FontWeight="Bold" FontSize="20" Grid.Row="1" Grid.ColumnSpan="2"/>
             <Label Content="Catergory" Margin="26,0,0,0" VerticalAlignment="Top" Height="33" Width="166" Grid.RowSpan="2" Foreground="White" FontSize="16" FontWeight="Bold" HorizontalAlignment="Left" Grid.ColumnSpan="2" Background="#FF404040"/>
             <Rectangle Fill="#FF10BD20" HorizontalAlignment="Left" Height="409" Margin="16,0,0,0" Stroke="Black" StrokeThickness="0" VerticalAlignment="Top" Width="10" Grid.RowSpan="3"/>
+            <Rectangle Grid.Column="1" Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="409" Margin="174,0,0,0" Stroke="Black" VerticalAlignment="Top" Width="559" Grid.RowSpan="3"/>
         </Grid>
         <Button x:Name="viewMain" Content="Center" HorizontalAlignment="Left" Margin="373,532,0,0" VerticalAlignment="Top" Width="58" Click="viewMain_Click"/>
         <Button x:Name="viewFeeds" Content="Feeds" HorizontalAlignment="Left" Margin="711,532,0,0" VerticalAlignment="Top" Width="58" Click="viewFeeds_Click"/>
