--- a/FeedMeNomNom/MainWindow.xaml
+++ b/FeedMeNomNom/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="FeedMeNomNom.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="FeedMeNomNom" Height="600" Width="800" WindowStartupLocation="CenterScreen" Background="#FF464646">
+        Title="FeedMeNomNom" Height="600" Width="800" WindowStartupLocation="CenterScreen" Background="#FF464646" ResizeMode="NoResize">
     <Grid Background="#FF1D1D1D">
         <TextBox x:Name="tbURL" Height="20" Margin="22,32,528,0" TextWrapping="Wrap" Text="http://alexosigge.libsyn.com//rss" VerticalAlignment="Top" FontFamily="Prestige Elite Std" Background="White" FontSize="10"/>
         <Button x:Name="getFeed_button" Content="Go!" HorizontalAlignment="Left" Margin="269,32,0,0" VerticalAlignment="Top" Width="34" Height="20" Click="getFeed_button_Click"/>
@@ -11,9 +11,9 @@
         <ListBox x:Name="list_Copy" HorizontalAlignment="Left" Height="63" VerticalAlignment="Top" Width="464" Background="#FF404040" BorderThickness="0" Panel.ZIndex="-1" Margin="328,0,0,0"/>
         <Rectangle x:Name="rectListboxFeed" Fill="#FF515151" HorizontalAlignment="Left" Height="32" Margin="0,471,0,0" Stroke="Black" StrokeThickness="0" VerticalAlignment="Top" Width="268" Panel.ZIndex="3"/>
         <Button x:Name="downloadSelectedPod" Content="Download" HorizontalAlignment="Left" Margin="10,476,0,0" VerticalAlignment="Top" Width="91" Panel.ZIndex="3" Height="19" Click="downloadSelectedPod_Click"/>
-        <Button x:Name="savePodFeed" Content="Save" HorizontalAlignment="Left" Margin="115,476,0,0" VerticalAlignment="Top" Width="68" Panel.ZIndex="3" Height="19"/>
+        <Button x:Name="savePodFeed" Content="Save" HorizontalAlignment="Left" Margin="115,476,0,0" VerticalAlignment="Top" Width="68" Panel.ZIndex="3" Height="19" Click="savePodFeed_Click"/>
         <Button x:Name="closeFeed" Content="Close" HorizontalAlignment="Left" Margin="197,476,0,0" VerticalAlignment="Top" Width="67" Click="closeFeed_Click" Panel.ZIndex="3" Height="19"/>
-        <ListBox x:Name="list_Copy2" HorizontalAlignment="Left" Height="56" VerticalAlignment="Top" Width="792" Background="#FF404040" BorderThickness="0" Panel.ZIndex="-1" Margin="0,514,0,0"/>
+        <ListBox x:Name="list_Copy2" HorizontalAlignment="Left" Height="58" VerticalAlignment="Top" Width="796" Background="#FF404040" BorderThickness="0" Panel.ZIndex="-1" Margin="0,514,-2,0"/>
         <Grid x:Name="gridPage" HorizontalAlignment="Left" Height="409" Margin="-800,86,-816,0" VerticalAlignment="Top" Width="2400" Background="#FF1D1D1D" Panel.ZIndex="2">
             <Grid.RowDefinitions>
                 <RowDefinition Height="26*"/>
@@ -36,11 +36,16 @@
             </Grid.ColumnDefinitions>
             <Rectangle Grid.Column="1" Fill="#FF103FBD" HorizontalAlignment="Left" Height="409" Margin="778,0,0,0" Stroke="Black" StrokeThickness="0" VerticalAlignment="Top" Width="10" Grid.RowSpan="3"/>
             <Rectangle Grid.Column="1" Fill="#FFBD10AD" Height="409" Margin="1595,0,0,0" Stroke="Black" StrokeThickness="0" VerticalAlignment="Top" Grid.RowSpan="3" HorizontalAlignment="Left" Width="8"/>
-            <ListBox x:Name="categoryListBox" HorizontalAlignment="Left" Width="166" Background="#FF404040" BorderThickness="0" Foreground="White" Grid.RowSpan="2" Margin="26,13,0,0" FontWeight="Bold" FontSize="20" Grid.Row="1" Grid.ColumnSpan="2"/>
+            <ListBox x:Name="categoryListBox" HorizontalAlignment="Left" Width="166" Background="#FF404040" BorderThickness="0" Foreground="White" Margin="26,13,0,26" FontWeight="Bold" FontSize="20" Grid.Row="1" Grid.ColumnSpan="2"/>
             <Label Content="Category" Margin="26,0,0,0" VerticalAlignment="Top" Height="33" Width="166" Grid.RowSpan="2" Foreground="White" FontSize="16" FontWeight="Bold" HorizontalAlignment="Left" Grid.ColumnSpan="2" Background="#FF404040"/>
             <Rectangle Fill="#FF10BD20" HorizontalAlignment="Left" Height="409" Margin="16,0,0,0" Stroke="Black" StrokeThickness="0" VerticalAlignment="Top" Width="10" Grid.RowSpan="3"/>
             <Rectangle Grid.Column="1" Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="409" Margin="174,0,0,0" Stroke="Black" VerticalAlignment="Top" Width="559" Grid.RowSpan="3"/>
-            <Button x:Name="addCategoryButton" Grid.Column="1" HorizontalAlignment="Left" Margin="116,4,0,0" VerticalAlignment="Top" Width="40" Grid.RowSpan="2" Height="29" Content="+" FontSize="16" Click="addCategoryButton_Click"/>
+            <Grid Grid.Column="1" Margin="1037,182,1024,-9" Grid.Row="1" Grid.RowSpan="2"/>
+            <Rectangle Fill="#FF404040" HorizontalAlignment="Left" Height="46" Margin="26,343,0,0" Grid.Row="1" Stroke="#FF404040" VerticalAlignment="Top" Width="166" Grid.ColumnSpan="2" Grid.RowSpan="2"/>
+            <Button Content="+" HorizontalAlignment="Left" Height="24" Margin="26,365,0,0" Grid.Row="1" Grid.RowSpan="2" VerticalAlignment="Top" Width="30" Grid.ColumnSpan="2"/>
+            <Button Content="-" HorizontalAlignment="Left" Height="24" Margin="126,365,0,0" Grid.Row="1" Grid.RowSpan="2" VerticalAlignment="Top" Width="30" Grid.Column="1"/>
+            <Button Content="Edit" HorizontalAlignment="Left" Height="24" Margin="20,365,0,0" Grid.Row="1" Grid.RowSpan="2" VerticalAlignment="Top" Width="30" Grid.Column="1"/>
+            <Button Content="Button" Grid.Column="1" HorizontalAlignment="Left" Margin="1375,47,0,0" Grid.Row="1" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
         </Grid>
         <Button x:Name="viewMain" Content="Center" HorizontalAlignment="Left" Margin="381,64,0,0" VerticalAlignment="Top" Width="78" Click="viewMain_Click" Background="#FF404040" Foreground="White" BorderThickness="0,1,1,1"/>
         <Button x:Name="viewFeeds" Content="Feeds" HorizontalAlignment="Left" Margin="459,64,0,0" VerticalAlignment="Top" Width="82" Click="viewFeeds_Click" RenderTransformOrigin="0.5,0.5" Background="#FF404040" Foreground="White" BorderThickness="0,1,1,1">
@@ -54,7 +59,7 @@
             </Button.RenderTransform>
         </Button>
         <Button x:Name="viewCategory" Content="Category" HorizontalAlignment="Left" Margin="308,64,0,0" VerticalAlignment="Top" Width="73" Click="viewCategory_Click" Background="#FF404040" Foreground="White" BorderThickness="0,1,1,1"/>
-        <ProgressBar x:Name="downloadBar" HorizontalAlignment="Left" Height="6" Margin="-4,508,-4,0" VerticalAlignment="Top" Width="800" BorderThickness="0">
+        <ProgressBar x:Name="downloadBar" HorizontalAlignment="Left" Height="6" Margin="-4,508,-4,0" VerticalAlignment="Top" Width="800" BorderThickness="0" Panel.ZIndex="1">
             <ProgressBar.BorderBrush>
                 <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
                     <GradientStop Color="#FF404040" Offset="0.007"/>
@@ -72,5 +77,18 @@
         <MediaElement x:Name="player" HorizontalAlignment="Left" Height="56" Margin="211,591,0,-77" VerticalAlignment="Top" Width="92"/>
         <Button Content="Play" HorizontalAlignment="Left" Height="22" Margin="74,534,0,0" VerticalAlignment="Top" Width="55" Click="Button_Click"/>
         <Button Content="Stop" HorizontalAlignment="Left" Margin="18,534,0,0" VerticalAlignment="Top" Width="51" Click="Button_Click_2"/>
+        <Grid HorizontalAlignment="Left" Height="100" Margin="341,839,0,-367" VerticalAlignment="Top" Width="100"/>
+        <Grid HorizontalAlignment="Left" Height="84" Margin="162,346,0,0" VerticalAlignment="Top" Width="102" Panel.ZIndex="10">
+            <Grid x:Name="saveGridPopup" HorizontalAlignment="Left" Height="216" VerticalAlignment="Top" Width="280" Background="#FF404040" Panel.ZIndex="-1" Margin="114,-60,-292,-72">
+                <TextBox HorizontalAlignment="Left" Height="23" Margin="19,41,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="242"/>
+                <TextBox HorizontalAlignment="Left" Height="23" Margin="19,95,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="242"/>
+                <Button x:Name="savePodFeedPopup" Content="Save" HorizontalAlignment="Left" Margin="19,184,0,0" VerticalAlignment="Top" Width="75"/>
+                <Label Content="Name" HorizontalAlignment="Left" Margin="10,15,0,0" VerticalAlignment="Top" Foreground="White"/>
+                <Label Content="Update Interval" HorizontalAlignment="Left" Margin="10,69,0,0" VerticalAlignment="Top" Foreground="White"/>
+                <ComboBox x:Name="cbCategory" HorizontalAlignment="Left" Margin="19,149,0,0" VerticalAlignment="Top" Width="242"/>
+                <Label Content="Category" HorizontalAlignment="Left" Margin="10,123,0,0" VerticalAlignment="Top" Foreground="White"/>
+                <Button x:Name="closePodFeedPopup" Content="Close" HorizontalAlignment="Left" Margin="186,184,0,0" VerticalAlignment="Top" Width="75" Click="closePodFeedPopup_Click"/>
+            </Grid>
+        </Grid>
     </Grid>
 </Window>
