--- a/FeedMeNomNom/MainWindow.xaml
+++ b/FeedMeNomNom/MainWindow.xaml
@@ -42,10 +42,20 @@
             <Rectangle Grid.Column="1" Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="409" Margin="174,0,0,0" Stroke="Black" VerticalAlignment="Top" Width="559" Grid.RowSpan="3"/>
             <Grid Grid.Column="1" Margin="1037,182,1024,-9" Grid.Row="1" Grid.RowSpan="2"/>
             <Rectangle Fill="#FF404040" HorizontalAlignment="Left" Height="46" Margin="26,343,0,0" Grid.Row="1" Stroke="#FF404040" VerticalAlignment="Top" Width="166" Grid.ColumnSpan="2" Grid.RowSpan="2"/>
-            <Button Content="+" HorizontalAlignment="Left" Height="24" Margin="26,365,0,0" Grid.Row="1" Grid.RowSpan="2" VerticalAlignment="Top" Width="30" Grid.ColumnSpan="2"/>
-            <Button Content="-" HorizontalAlignment="Left" Height="24" Margin="126,365,0,0" Grid.Row="1" Grid.RowSpan="2" VerticalAlignment="Top" Width="30" Grid.Column="1"/>
-            <Button Content="Edit" HorizontalAlignment="Left" Height="24" Margin="20,365,0,0" Grid.Row="1" Grid.RowSpan="2" VerticalAlignment="Top" Width="30" Grid.Column="1"/>
-            <Button Content="Button" Grid.Column="1" HorizontalAlignment="Left" Margin="1375,47,0,0" Grid.Row="1" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
+            <Button Content="+" HorizontalAlignment="Left" Margin="26,365,0,0" Grid.Row="1" Grid.RowSpan="2" Width="30" Grid.ColumnSpan="2" Click="Button_Click_5"/>
+            <Button Content="-" HorizontalAlignment="Left" Height="24" Margin="126,365,0,0" Grid.Row="1" Grid.RowSpan="2" VerticalAlignment="Top" Width="30" Grid.Column="1" Click="Button_Click_4"/>
+            <Button Content="Edit" Height="24" Margin="20,365,2282,0" Grid.Row="1" Grid.RowSpan="2" VerticalAlignment="Top" Grid.Column="1"/>
+            <Button Content="Button" Grid.Column="1" HorizontalAlignment="Left" Margin="1578,-47,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
+            <Grid x:Name="categoryGridPopup" Grid.Column="1" HorizontalAlignment="Left" Height="69" Margin="174,320,0,0" Grid.Row="1" Grid.RowSpan="2" VerticalAlignment="Top" Width="232" Background="#FF404040">
+                <TextBox x:Name="categoryNewName" HorizontalAlignment="Left" Height="23" Margin="10,36,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+                <Button Content="Add" HorizontalAlignment="Left" Margin="147,37,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_6"/>
+                <Label Content="Name" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="69" Foreground="White"/>
+            </Grid>
+            <Grid x:Name="categoryGridPopupEdit" Grid.Column="1" HorizontalAlignment="Left" Height="69" Margin="406,320,0,0" Grid.Row="1" Grid.RowSpan="2" VerticalAlignment="Top" Width="232" Background="#FF404040">
+                <TextBox x:Name="categoryEdit" HorizontalAlignment="Left" Height="23" Margin="10,36,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+                <Button Content="Edit" HorizontalAlignment="Left" Margin="147,37,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_7"/>
+                <Label Content="Name" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="69" Foreground="White"/>
+            </Grid>
         </Grid>
         <Button x:Name="viewMain" Content="Center" HorizontalAlignment="Left" Margin="381,64,0,0" VerticalAlignment="Top" Width="78" Click="viewMain_Click" Background="#FF404040" Foreground="White" BorderThickness="0,1,1,1"/>
         <Button x:Name="viewFeeds" Content="Feeds" HorizontalAlignment="Left" Margin="459,64,0,0" VerticalAlignment="Top" Width="82" Click="viewFeeds_Click" RenderTransformOrigin="0.5,0.5" Background="#FF404040" Foreground="White" BorderThickness="0,1,1,1">
@@ -80,9 +90,9 @@
         <Grid HorizontalAlignment="Left" Height="100" Margin="341,839,0,-367" VerticalAlignment="Top" Width="100"/>
         <Grid HorizontalAlignment="Left" Height="84" Margin="162,346,0,0" VerticalAlignment="Top" Width="102" Panel.ZIndex="10">
             <Grid x:Name="saveGridPopup" HorizontalAlignment="Left" Height="216" VerticalAlignment="Top" Width="280" Background="#FF404040" Panel.ZIndex="-1" Margin="114,-60,-292,-72">
-                <TextBox HorizontalAlignment="Left" Height="23" Margin="19,41,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="242"/>
-                <TextBox HorizontalAlignment="Left" Height="23" Margin="19,95,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="242"/>
-                <Button x:Name="savePodFeedPopup" Content="Save" HorizontalAlignment="Left" Margin="19,184,0,0" VerticalAlignment="Top" Width="75"/>
+                <TextBox x:Name="addFeedName" HorizontalAlignment="Left" Height="23" Margin="19,41,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="242"/>
+                <TextBox x:Name="intervalTextBox" HorizontalAlignment="Left" Height="23" Margin="19,95,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="242"/>
+                <Button x:Name="savePodFeedPopup" Content="Save" HorizontalAlignment="Left" Margin="19,184,0,0" VerticalAlignment="Top" Width="75" Click="savePodFeedPopup_Click"/>
                 <Label Content="Name" HorizontalAlignment="Left" Margin="10,15,0,0" VerticalAlignment="Top" Foreground="White"/>
                 <Label Content="Update Interval" HorizontalAlignment="Left" Margin="10,69,0,0" VerticalAlignment="Top" Foreground="White"/>
                 <ComboBox x:Name="cbCategory" HorizontalAlignment="Left" Margin="19,149,0,0" VerticalAlignment="Top" Width="242"/>
